// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <DocumentsDetailDischarge /> should renders with props correctly 1`] = `
<div
  className="form"
>
  <div
    className="form-group-wrapper"
  >
    <div
      className="row-expand"
    >
      <div
        className="col-expand-left"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label"
          >
            Document Date
          </label>
          <div
            className="form-control-static"
          >
            01-Jan-2017
          </div>
        </div>
      </div>
    </div>
    <div
      className="row-expand"
    >
      <div
        className="col-expand-left"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label"
          >
            Author
          </label>
          <div
            className="form-control-static"
          />
        </div>
      </div>
    </div>
    <FormSectionList
      title="Facility"
    >
      <FormSection
        isAccordion={false}
        isBordered={false}
        isImportBtn={false}
      >
        <div
          className="form-group-wrapper"
        >
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Name
                </label>
                <div
                  className="form-control-static"
                />
              </div>
            </div>
          </div>
        </div>
      </FormSection>
    </FormSectionList>
    <FormSectionList
      title="Patient Identifier"
    >
      <FormSection
        isAccordion={false}
        isBordered={false}
        isImportBtn={false}
      >
        <div
          className="form-group-wrapper"
        >
          <div
            className="row-expand"
          />
          <div
            className="row-expand"
          />
          <div
            className="row-expand"
          />
          <div
            className="row-expand"
          />
          <div
            className="row-expand"
          />
          <div
            className="row-expand"
          />
        </div>
      </FormSection>
    </FormSectionList>
  </div>
</div>
`;

exports[`Component <DocumentsDetailDischarge /> should renders with props correctly 2`] = `
<div
  className="form"
>
  <div
    className="form-group-wrapper"
  >
    <div
      className="row-expand"
    >
      <div
        className="col-expand-left"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label"
          >
            Document Name
          </label>
          <div
            className="form-control-static"
          >
            NAME
          </div>
        </div>
      </div>
      <div
        className="col-expand-right"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label"
          >
            Document Date
          </label>
          <div
            className="form-control-static"
          >
            01-Jan-2017
          </div>
        </div>
      </div>
    </div>
    <div
      className="row-expand"
    >
      <div
        className="col-expand-left"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label"
          >
            Author
          </label>
          <div
            className="form-control-static"
          >
            AUTHOR
          </div>
        </div>
      </div>
    </div>
    <FormSectionList
      title="Facility"
    >
      <FormSection
        isAccordion={false}
        isBordered={false}
        isImportBtn={false}
      >
        <div
          className="form-group-wrapper"
        >
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Name
                </label>
                <div
                  className="form-control-static"
                >
                  FACILITY
                </div>
              </div>
            </div>
          </div>
        </div>
      </FormSection>
    </FormSectionList>
    <FormSectionList
      title="Patient Identifier"
    >
      <FormSection
        isAccordion={false}
        isBordered={false}
        isImportBtn={false}
      >
        <div
          className="form-group-wrapper"
        >
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  MRM Type
                </label>
                <div
                  className="form-control-static"
                >
                  PI_MRNTYPE
                </div>
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  OTH Type
                </label>
                <div
                  className="form-control-static"
                >
                  PI_OTHTYPE
                </div>
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  GMS Type
                </label>
                <div
                  className="form-control-static"
                >
                  PI_GMSTYPE
                </div>
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Responsible Professional
                </label>
                <div
                  className="form-control-static"
                >
                  PI_NAME
                </div>
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Responsible Professional Type
                </label>
                <div
                  className="form-control-static"
                >
                  PI_ID_TYPE
                </div>
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  From
                </label>
                <div
                  className="form-control-static"
                >
                  PI_SOURCE
                </div>
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Discharging Organisation
                </label>
                <div
                  className="form-control-static"
                >
                  PI_DISCHARGING
                </div>
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Discharging Date
                </label>
                <div
                  className="form-control-static"
                >
                  01-Jan-2017
                </div>
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Clinical Synopsis
                </label>
                <div
                  className="form-control-static"
                >
                  PI_CLINICAL
                </div>
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Date of Admission
                </label>
                <div
                  className="form-control-static"
                >
                  01-Jan-2017
                </div>
              </div>
            </div>
          </div>
        </div>
      </FormSection>
    </FormSectionList>
    <FormSectionList
      title="Diagnosis List"
    >
      <FormSection
        isAccordion={true}
        isBordered={true}
        isImportBtn={true}
        key="0"
        theme="primary"
        title="Problem: DG_PROBLEM"
      >
        <div
          className="form-group-wrapper"
        >
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Problem
                </label>
                <div
                  className="form-control-static"
                >
                  DG_PROBLEM
                </div>
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Description
                </label>
                <div
                  className="form-control-static"
                >
                  DG_DESCR
                </div>
              </div>
            </div>
          </div>
          <div
            className="row-expand"
          >
            <div
              className="col-expand-left"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Terminology
                </label>
                <div
                  className="form-control-static"
                >
                  DG_TERMINOLOGY
                </div>
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  Terminology Code
                </label>
                <div
                  className="form-control-static"
                >
                  DG_TERMINOLOGY_CODE
                </div>
              </div>
            </div>
          </div>
        </div>
      </FormSection>
    </FormSectionList>
  </div>
</div>
`;
